executed phase 1 and 2 for the new kanban design